# FreeCAD

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: sub_buildUbuntu2004.yml
cMake/: FreeCadMacros.cmake
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake  PrintFinalReport.cmake  SetupQt.cmake
data/examples/: RobotExample.FCStd
src/App/: Application.cpp  Application.h  ApplicationPy.cpp  AutoTransaction.cpp  AutoTransaction.h  Branding.cpp  CMakeLists.txt  ColorModel.cpp  ColorModel.h  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoDataPyImp.cpp  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectExtensionPyImp.cpp  DocumentObjectFileIncluded.cpp  DocumentObjectFileIncluded.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  DocumentObjectGroupPyImp.cpp  DocumentObjectPyImp.cpp  DocumentObserver.cpp  DocumentObserver.h  DocumentObserverPython.cpp  DocumentPyImp.cpp  DynamicProperty.cpp  DynamicProperty.h  ElementResolver.cpp  ElementResolver.h  Enumeration.cpp  Enumeration.h  Expression.cpp  Expression.h  ExpressionParser.h  ExpressionParser.tab.c  ExpressionVisitors.h  (+75 more)
src/Base/: AxisPyImp.cpp  Base64.h  BaseClass.cpp  BaseClass.h  BaseClassPyImp.cpp  BoundBox.h  BoundBoxPyImp.cpp  Builder3D.cpp  Builder3D.h  CMakeLists.txt  Console.cpp  Console.h  ConsoleObserver.cpp  Handle.h  (+71 more)
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  qttestcase.cpp  test1.cpp  test2.cpp
tests/src/Base/: CMakeLists.txt  Quantity.cpp  Safe.cpp
tests/src/Mod/Part/App/: TopoShape.cpp
(+1571 files in other folders)
